--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
+    "styled-reset": "^4.4.2",
     "swr": "^1.3.0"
   },
   "devDependencies": {
