--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.4.2",
+    "swiper": "^8.3.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
