--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "mongoose": "^6.4.6",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
