--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "mongoose": "^6.4.6",
     "next": "12.2.2",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
