--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
+    "express": "^4.18.1",
+    "http-errors": "^2.0.0",
     "mongoose": "^6.4.6",
+    "morgan": "^1.10.0",
     "next": "12.2.2",
     "next-redux-wrapper": "^7.0.5",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -24,7 +29,8 @@
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.4.2",
     "swiper": "^8.3.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.20.0",
