--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
@@ -20,6 +20,7 @@
     "next": "12.2.2",
     "next-redux-wrapper": "^7.0.5",
     "path": "^0.12.7",
+    "pug": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
