and SSR to load more data

--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "express": "^4.18.1",
+    "faker": "^6.6.6",
     "http-errors": "^2.0.0",
     "mongoose": "^6.4.6",
     "morgan": "^1.10.0",
     "next": "12.2.2",
+    "next-auth": "^4.10.2",
     "next-redux-wrapper": "^7.0.5",
+    "node-fetch": "^3.2.9",
     "path": "^0.12.7",
     "pug": "^3.0.2",
     "react": "18.2.0",
