--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "sharp": "^0.30.7",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.4.2",
