--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "redux-storage": "^4.1.2",
+    "redux-storage-engine-localstorage": "^1.1.4",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "sharp": "^0.30.7",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
