--- a/package.json
+++ b/package.json
@@ -10,36 +10,21 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "cors-anywhere": "^0.4.4",
-    "express": "^4.18.1",
-    "faker": "^6.6.6",
-    "http-errors": "^2.0.0",
-    "mongoose": "^6.4.6",
-    "morgan": "^1.10.0",
+    "broadcast-channel": "^4.14.0",
     "next": "12.2.2",
     "next-auth": "^4.10.2",
     "next-redux-wrapper": "^7.0.5",
-    "node-fetch": "^3.2.9",
-    "path": "^0.12.7",
-    "pug": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-storage": "^4.1.2",
-    "redux-storage-engine-localstorage": "^1.1.4",
     "reduxjs-toolkit-persist": "^7.2.1",
     "sharp": "^0.30.7",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.4.2",
-    "swiper": "^8.3.1",
-    "swr": "^1.3.0",
-    "uuid": "^8.3.2"
+    "swiper": "^8.3.1"
   },
   "devDependencies": {
     "eslint": "8.20.0",
