--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "swiper": "^8.3.1"
   },
   "devDependencies": {
+    "compression-webpack-plugin": "^10.0.0",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2"
   }
