--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.2.2",
     "next-auth": "^4.10.2",
     "next-redux-wrapper": "^7.0.5",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
