--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "reduxjs-toolkit-persist": "^7.2.1",
     "sharp": "^0.30.7",
     "styled-components": "^5.3.5",
+    "styled-normalize": "^8.0.7",
     "styled-reset": "^4.4.2",
     "swiper": "^8.3.1"
   },
